header width, padding settings to % in old table view

--- a/_includes/blocks/old-pmx-table.html
+++ b/_includes/blocks/old-pmx-table.html
@@ -26,27 +26,16 @@
           <ul class="itembox">
             <li class="top">
               <ul>
-                <div class="cresizer">
-                  <div class="cresizer-handle" data-column="0" style="height: 640px; left: 301px;"></div>
-                  <div class="cresizer-handle" data-column="1" style="height: 640px; left: 417px;"></div>
-                  <div class="cresizer-handle" data-column="2" style="height: 640px; left: 523px;"></div>
-                  <div class="cresizer-handle" data-column="3" style="height: 640px; left: 627px;"></div>
-                  <div class="cresizer-handle selected" data-column="4" style="height: 640px; left: 727px;"></div>
-                  <div class="cresizer-handle" data-column="5" style="height: 640px; left: 790px;"></div>
-                  <div class="cresizer-handle" data-column="6" style="height: 640px; left: 898px;"></div>
-                  <div class="cresizer-handle" data-column="7" style="height: 640px; left: 1111px;"></div>
-                  <div class="cresizer-handle" data-column="8" style="height: 640px; left: 1260px;"></div>
-                  <div class="cresizer-handle" data-column="9" style="height: 640px; left: 1404px;"></div>
-                  <div class="cresizer-handle" data-column="10" style="height: 640px; left: 1529px;"></div>
-                  <div class="cresizer-handle" data-column="11" style="height: 640px; left: 1596px;"></div>
-                </div>
+                <div class="cresizer" style="width: 100%;">
+                  <div class="cresizer-handle" data-column="0" style="height: 121px; left: 32%;"></div>
+                  <div class="cresizer-handle" data-column="1" style="height: 121px; left: 64.5%;"></div>
                 <li class="header">
                   <ul class="columns">
-                    <li id="anonymous_element_75" class="column column0 level0 variable  sorting colname_col_sf2 titlefilter" style="width: 294px;"><span id="anonymous_element_76" class="sortable noexpandall" title="Title">Title</span></li>
-                    <li id="anonymous_element_81" class="column column3 level0 medium  sorting colname_col_sf15" style="width: 96px;"><span id="anonymous_element_82" class="sortable" title="Performed For">Performed For</span></li>
-                    <li id="anonymous_element_91" class="column column8 level0 medium  sorting colname_col_sf4" style="width: 141px;"><span id="anonymous_element_92" class="sortable" title="Assigned to">Assigned to</span></li>
-                    <li class="column column13 level0 actionCol1 action action"><a class="columns" title="Customize columns">&nbsp;</a></li>
-                    <li class="column column14 level0 actionCol2 action action"><a class="toggle" id="listtools_filter" title="Toggle filter">&nbsp;</a></li>
+                    <li id="anonymous_element_75" class="column column0 level0 variable  sorting colname_col_sf2 titlefilter" style="width: 32%;"><span id="anonymous_element_76" class="sortable noexpandall" title="Title">Title</span></li>
+                    <li id="anonymous_element_81" class="column column3 level0 medium  sorting colname_col_sf15" style="width: 32%;"><span id="anonymous_element_82" class="sortable" title="Performed For">Performed For</span></li>
+                    <li id="anonymous_element_91" class="column column8 level0 medium  sorting colname_col_sf4" style="width: 30%;"><span id="anonymous_element_92" class="sortable" title="Assigned to">Assigned to</span></li>
+                    <li class="column column13 level0 actionCol1 action action" style="width: 1%;"><a class="columns" title="Customize columns">&nbsp;</a></li>
+                    <li class="column column14 level0 actionCol2 action action" style="width: 1%;"><a class="toggle" id="listtools_filter" title="Toggle filter">&nbsp;</a></li>
                   </ul>
                 </li>
                 <li class="filter old-pmx-filter">
@@ -54,15 +43,15 @@
                     <table class="filtermode">
                       <tbody>
                         <tr>
-                          <td id="anonymous_element_101" class="column column0 level0 variable  colname_col_sf2 titlefilter longtext" style="width: 294px;"><input id="anonymous_element_126" class="ipfTextField-input text full" type="text" style="width: 267px;"></td>
-                          <td id="anonymous_element_102" class="column column1 level0 medium  colname_col_sf5 combobox" style="width: 108px;"><span id="anonymous_element_127"><div id="picker" class="solidinput haspicker" title="" style="width: 99px;"><div class="newpicker bottom" id="anonymous_element_128"><span class="newpickerbutton showFunnel">&nbsp;</span>
+                          <td id="anonymous_element_101" class="column column0 level0 variable  colname_col_sf2 titlefilter longtext" style="width: 30%;"><input id="anonymous_element_126" class="ipfTextField-input text full" type="text" style="width: 95%;"></td>
+                          <td id="anonymous_element_102" class="column column1 level0 medium  colname_col_sf5 combobox" style="width: 30%;"><span id="anonymous_element_127"><div id="picker" class="solidinput haspicker" title="" style="width: 95%;"><div class="newpicker bottom" id="anonymous_element_128"><span class="newpickerbutton showFunnel">&nbsp;</span>
                   </div>
-                  <div class="pickerinput"><span class="noinput invisible pickerfocusable" tabindex="0">&nbsp;</span><input type="text" value="" class="text" style="width: 75px;"></div>
+                  <div class="pickerinput"><span class="noinput invisible pickerfocusable" tabindex="0">&nbsp;</span><input type="text" value="" class="text" style="width: 95%;"></div>
                   <!-- pickerinput -->
         </div>
         </span>
         </td>
-<td id="anonymous_element_109" class="column column8 level0 medium  colname_col_sf4 multipersonpicker" style="width: 141px;"><span id="anonymous_element_138"><div id="picker" class="solidinput haspicker" style="height: auto; width: 132px; font-size:14px;" title="Arnaud S&amp;#39;Jongers, Esteban Sastre, Jonathan Langens"><div class="newpicker bottom open" id="anonymous_element_139">
+<td id="anonymous_element_109" class="column column8 level0 medium  colname_col_sf4 multipersonpicker" style="width: 29%;"><span id="anonymous_element_138"><div id="picker" class="solidinput haspicker" style="height: auto; width: 95%; font-size:14px;" title="Arnaud S&amp;#39;Jongers, Esteban Sastre, Jonathan Langens"><div class="newpicker bottom open" id="anonymous_element_139">
 
 
 <span class="newpickerbutton old-pmx-multiselect-trigger">&nbsp;</span>
@@ -75,8 +64,7 @@
   </div>
   </span>
 </td>
-<td id="anonymous_element_114" class="column column13 level0 actionCol1  action frozenColumn-action"><a class="search">&nbsp;</a></td>
-<td id="anonymous_element_115" class="column column14 level0 actionCol2  action frozenColumn-action2">&nbsp;</td>
+<td id="anonymous_element_114" class="column column13 level0 actionCol1  action frozenColumn-action" style="width: 4% !important; position: unset !important; right: unset !important;"><a class="search">&nbsp;</a></td>
 </tr>
 </tbody>
 </table>
