positioning %-ly all tbody cells

--- a/_includes/blocks/old-pmx-table.html
+++ b/_includes/blocks/old-pmx-table.html
@@ -58,8 +58,7 @@
 {% include popups/old-pmx-multiselect.html %}
 
   </div>
-  <div class="pickerinput"><span class="noinput pickerfocusable" tabindex="0" style="width: 108px;">Arnaud S'Jongers,
-…</span><input type="text" value="" class="text invisible"></div>
+  <div class="pickerinput"><span class="noinput pickerfocusable" tabindex="0" style="width: 108px;">Arnaud S'Jongers, …</span><input type="text" value="" class="text invisible"></div>
   <!-- pickerinput -->
   </div>
   </span>
@@ -76,15 +75,15 @@
   <ul>
     <li data-itemid="674444" data-indentationlevel="0" class="item hasinlineedit">
       <ul class="columns">
-        <li id="item-674444-0-" class="column column0 level0 variable  colname_col_sf2 titlefilter" style="width: 294px;">
+        <li id="item-674444-0-" class="column column0 level0 variable  colname_col_sf2 titlefilter" style="width: 32%;">
           <div class="cell" title="Milestone 2018-02-06">
             <div class="safetyNet notText " style="margin-left:0px;"><a class="relations nochildren"></a><a href="/dashboard/55754f/674444">Milestone 2018-02-06</a></div>
           </div>
         </li>
-        <li id="item-674444-3-" class="column column3 level0 medium  colname_col_sf15" style="width: 96px;">
+        <li id="item-674444-3-" class="column column3 level0 medium  colname_col_sf15" style="width: 32%;">
           <div class="cell" title="Ichoosr">Ichoosr</div>
         </li>
-        <li id="item-674444-8-" class="column column8 level0 medium  colname_col_sf4" style="width: 141px;">
+        <li id="item-674444-8-" class="column column8 level0 medium  colname_col_sf4" style="width: 32%;">
           <div class="cell" title="Kasper Van Waes">Kasper Van Waes</div>
         </li>
         <li id="item-674444-13-" class="column column13 level0 actionCol1 action action"><a class="menu actionmenu">&nbsp;</a></li>
@@ -94,15 +93,15 @@
     </li>
     <li data-itemid="672392" data-indentationlevel="0" class="item hasinlineedit">
       <ul class="columns">
-        <li id="item-672392-0-" class="column column0 level0 variable  colname_col_sf2 titlefilter" style="width: 294px;">
+        <li id="item-672392-0-" class="column column0 level0 variable  colname_col_sf2 titlefilter" style="width: 32%;">
           <div class="cell" title="Milestone 2018-01-23">
             <div class="safetyNet notText " style="margin-left:0px;"><a class="relations nochildren"></a><a href="/dashboard/55754f/672392">Milestone 2018-01-23</a></div>
           </div>
         </li>
-        <li id="item-672392-3-" class="column column3 level0 medium  colname_col_sf15" style="width: 96px;">
+        <li id="item-672392-3-" class="column column3 level0 medium  colname_col_sf15" style="width: 32%;">
           <div class="cell" title="CitriqueBelge">CitriqueBelge</div>
         </li>
-        <li id="item-672392-8-" class="column column8 level0 medium  colname_col_sf4" style="width: 141px;">
+        <li id="item-672392-8-" class="column column8 level0 medium  colname_col_sf4" style="width: 32%;">
           <div class="cell" title="Tonny Schroeders">Tonny Schroeders</div>
         </li>
         <li id="item-672392-14-" class="column column14 level0 actionCol2 action action">&nbsp; </li>
