--- a/sass/components/multiSelector.scss
+++ b/sass/components/multiSelector.scss
@@ -74,3 +74,112 @@
   z-index: 0;
   transition: opacity .3s ease-in-out;
 }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+#multiSelector-2 {
+  font-size: 20px;
+  right: 1%;
+  top: 2%;
+
+  &.multiSelector--visible {
+    pointer-events: auto;
+    z-index: 99999999;
+    opacity: 1 !important;
+  }
+
+  .multiSelector {
+    &__search {
+
+        position: relative;
+        height: 40px;
+        background-color: #FFF;
+
+        &Input {
+          width: 100%;
+          height: 100%;
+          padding: 5px 40px 5px 15px;
+          font-size: 16px;
+
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+
+          &::-webkit-input-placeholder {
+            font-style: italic;
+            font-weight: 400;
+            color: rgba(0,0,0,.35);
+          }
+
+          &:-webkit-autofill {
+            -webkit-box-shadow: 0 0 0 50px #ffffff inset;
+          }
+        }
+
+        &Icon {
+          position: absolute;
+          top: 0;
+          right: 0;
+          width: 40px;
+          height: 40px;
+          color: #285C9E;
+          text-decoration: none;
+          font-size: 20px;
+          padding: 5px;
+
+          &::before {
+            content: "\e036";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+          }
+        }
+
+        &Selected {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: calc(100% - 40px);
+          padding: 6px 0 6px 15px;
+          white-space: nowrap;
+          overflow: hidden;
+
+          &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 30px;
+            height: 100%;
+            background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 90%,rgba(255,255,255,1) 100%);
+            pointer-events: none;
+            z-index: 99;
+          }
+
+          .pmx-selector {
+            margin-right: 5px;
+          }
+        }
+    }
+
+    &__box {
+      margin: 0 0 15px;
+      box-shadow: 0 0 80px 10px rgba(0,0,0,.7);
+    }
+  }
+
+  .itemBox {
+    &--children {
+      background-color: #808080;
+    }
+  }
+
+}
