trigger to open new multiselector

--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -1,4 +1,4 @@
-<div class="multiSelector multiSelector--visible"  id="multiSelector-2">
+<div class="multiSelector"  id="multiSelector-2">
 
   <div class="multiSelector__box">
 
