--- a/_includes/blocks/old-pmx-table.html
+++ b/_includes/blocks/old-pmx-table.html
@@ -34,7 +34,7 @@
                     <li id="anonymous_element_75" class="column column0 level0 variable  sorting colname_col_sf2 titlefilter" style="width: 32%;"><span id="anonymous_element_76" class="sortable noexpandall" title="Title">Title</span></li>
                     <li id="anonymous_element_81" class="column column3 level0 medium  sorting colname_col_sf15" style="width: 32%;"><span id="anonymous_element_82" class="sortable" title="Performed For">Performed For</span></li>
                     <li id="anonymous_element_91" class="column column8 level0 medium  sorting colname_col_sf4" style="width: 30%;"><span id="anonymous_element_92" class="sortable" title="Assigned to">Assigned to</span></li>
-                    <li class="column column13 level0 actionCol1 action action" style="width: 1%;"><a class="columns" title="Customize columns">&nbsp;</a></li>
+                    <li class="column column13 level0 actionCol1 action action new-multiselect-trigger" style="width: 1%;"><a class="columns " title="Customize columns">&nbsp;</a></li>
                     <li class="column column14 level0 actionCol2 action action" style="width: 1%;"><a class="toggle" id="listtools_filter" title="Toggle filter">&nbsp;</a></li>
                   </ul>
                 </li>
