--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -14,6 +14,7 @@
 
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/app.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/root.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/jquery-ui.min.js"></script>
 
 <!-- PLUGINS -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
