--- a/_includes/popups/old-pmx-multiselect.html
+++ b/_includes/popups/old-pmx-multiselect.html
@@ -3,7 +3,7 @@
     <div class="newpickercontent">
       <div id="tabs" class="old-multiselect-tabs">
         <ul>
-          <li tab-name="Included" class="tab-selector selected"><a tabindex="-1"><span>Included<sup></sup></span></a></li>
+          <li tab-name="Included" class="tab-selector selected"><a tabindex="-1"><span>Included<sup>3</sup></span></a></li>
           <li tab-name="Excluded" class="tab-selector"><a tabindex="-1"><span>Excluded<sup>5</sup></span></a></li>
         </ul>
       </div>
