--- a/sass/old-pmx-temp.scss
+++ b/sass/old-pmx-temp.scss
@@ -61,3 +61,10 @@ body {
 .old-multiselect-tab-negative span.checked:before, .old-multiselect-tab-negative span.checked:hover:before {
   color: red;
 }
+
+sup {
+  padding-left: 5px;
+}
+.selected sup {
+  display: none;
+}
