--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -24,6 +24,7 @@
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/semsearch.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toggle.js"></script>
 
 <!-- OLD COMPONENTS -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/pmx/old-pmx-multiselect.js"></script>
