added inner-outer spans for selected block

--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -30,7 +30,7 @@
               <div class="itemBoxBody itemBoxBody--sortable">
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                    <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--text">Assigned to</div>
+                    <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--text"><span class="outer"><span class="inner">Assigned to</span></span></div>
                   </li>
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner">
