added new -> arrow for tab__more

--- a/_includes/blocks/app-nav.html
+++ b/_includes/blocks/app-nav.html
@@ -16,7 +16,7 @@
       </ul>
       <div class="tab__more">
         <span class="tab__shadow"></span>
-        <span class="tab__arrow">⇾</span>
+        <span class="tab__arrow">→</span>
         <span class="tab__counter">9</span>
       </div>
     </div>
