added new data into multiselect

--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -30,7 +30,7 @@
               <div class="itemBoxBody itemBoxBody--sortable">
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                    <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--text"><span class="outer"><span class="inner">Assigned to</span></span></div>
+                    <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--text"><span class="outer"><span class="inner">Arnaud</span></span></div>
                   </li>
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner">
@@ -102,7 +102,7 @@
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                    <div class="itemBoxTable__bodyCellInner">Main attributes</div>
+                    <div class="itemBoxTable__bodyCellInner">Squad 5</div>
                   </li>
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner">
@@ -120,7 +120,7 @@
                     <div class="itemBoxBody">
                       <ul class="itemBoxTable__bodyRow">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                          <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--text">Assigned to</div>
+                          <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--text">Arnaud</div>
                         </li>
                         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                           <div class="itemBoxTable__bodyCellInner">
@@ -130,7 +130,27 @@
                       </ul>
                       <ul class="itemBoxTable__bodyRow">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                          <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--text">Due text</div>
+                          <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--text">Esteban</div>
+                        </li>
+                        <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
+                          <div class="itemBoxTable__bodyCellInner">
+                            <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
+                          </div>
+                        </li>
+                      </ul>
+                      <ul class="itemBoxTable__bodyRow">
+                        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                          <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--text">Nóra</div>
+                        </li>
+                        <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
+                          <div class="itemBoxTable__bodyCellInner">
+                            <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
+                          </div>
+                        </li>
+                      </ul>
+                      <ul class="itemBoxTable__bodyRow">
+                        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                          <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--text">Paul</div>
                         </li>
                         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
                           <div class="itemBoxTable__bodyCellInner">
