removed folder from a non-parent item in app-nav

--- a/_includes/blocks/app-nav.html
+++ b/_includes/blocks/app-nav.html
@@ -47,7 +47,7 @@
               <ul class="itemBoxTable__bodyRow">
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner">
-                      <i class="itemBoxTable__action">अ</i>
+                      <i class="itemBoxTable__action"></i>
                     </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
