--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -3,8 +3,11 @@
 
 .mobile {
   background: #222;
-  &-header {
+
+  &__header {
     .app-navigator {
+      padding: 0 1%;
+
       &__left {
         width: unset;
       }
@@ -19,10 +22,76 @@
         &--white a {
           color: white;
         }
+
         &--blue a {
           color: deepskyblue;
         }
       }
+    }
+  }
+
+  &__document {
+    margin: 0;
+    background-color: #F2F2F2;
+    padding: 0.5% 0;
+    border-bottom: 2px dashed black;
+
+    .document {
+      &__identifier {
+        padding: 0 1% 0 1%;
+        width: fit-content;
+        border-radius: 0 500px 500px 0;
+        background-color: orange;
+        font-weight: 600;
+        letter-spacing: 1px;
+
+        span {
+          text-transform: uppercase;
+          color: black;
+          font-size: 12px;
+          vertical-align: middle;
+        }
+      }
+
+      &__header {
+        text-transform: uppercase;
+        font-weight: 600;
+        padding-top: 0;
+        padding-bottom: 0;
+
+        .status {
+          text-transform: uppercase;
+          color: black;
+          border-color: transparent;
+          background: lightgray;
+          padding: 5px 12px;
+        }
+
+        .view-selector {
+          display: inline-block;
+          float: right;
+          font-weight: normal;
+
+          .pmx-selector__value {
+            &:hover, &--selected {
+              .pmx-selector__label {
+                color: #bf920b;
+              }
+            }
+          }
+        }
+
+        .actions {
+          li {
+            display: inline-block;
+            color: #bf920b;
+            font-weight: normal;
+            font-size: 20px;
+            padding: 0 5px;
+          }
+        }
+      }
+
     }
   }
 }
