--- a/_includes/blocks/document-comments.html
+++ b/_includes/blocks/document-comments.html
@@ -35,7 +35,7 @@
             <div class="item item--attachment item--self">
               <div class="item__user">Jetro Wils</div>
               <div class="item__inner">
-                <div class="cover" style="background-image:url(../assets/images/files.jpg);"></div>
+                <div class="cover" style="background-image:url(assets/images/files.jpg);"></div>
                 <div class="caption">Excepteur sint occaecat cupidatat non proident.</div>
               </div>
               <div class="item__postdate">uploaded at <span class="postdate__time">7:11</span> on <span class="postdate__date">11/06/2017</span></div>
@@ -43,7 +43,7 @@
             <div class="item item--attachment">
               <div class="item__user">Konstantin Kharlov</div>
               <div class="item__inner">
-                <div class="cover" style="background-image:url(../assets/images/roadwork.jpg);"></div>
+                <div class="cover" style="background-image:url(assets/images/roadwork.jpg);"></div>
                 <div class="caption">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
               </div>
               <div class="item__postdate">uploaded at <span class="postdate__time">9:01</span> on <span class="postdate__date">10/06/2017</span></div>
@@ -60,7 +60,7 @@
             <div class="item item--attachment item--self">
               <div class="item__user">Jetro Wils</div>
               <div class="item__inner">
-                <div class="cover" style="background-image:url(../assets/images/files.jpg);"></div>
+                <div class="cover" style="background-image:url(assets/images/files.jpg);"></div>
                 <div class="caption">Excepteur sint occaecat cupidatat non proident.</div>
               </div>
               <div class="item__postdate">uploaded at <span class="postdate__time">7:11</span> on <span class="postdate__date">11/06/2017</span></div>
@@ -68,7 +68,7 @@
             <div class="item item--attachment">
               <div class="item__user">Konstantin Kharlov</div>
               <div class="item__inner">
-                <div class="cover" style="background-image:url(../assets/images/roadwork.jpg);"></div>
+                <div class="cover" style="background-image:url(assets/images/roadwork.jpg);"></div>
                 <div class="caption">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
               </div>
               <div class="item__postdate">uploaded at <span class="postdate__time">9:01</span> on <span class="postdate__date">10/06/2017</span></div>
@@ -85,7 +85,7 @@
             <div class="item item--attachment item--self">
               <div class="item__user">Jetro Wils</div>
               <div class="item__inner">
-                <div class="cover" style="background-image:url(../assets/images/files.jpg);"></div>
+                <div class="cover" style="background-image:url(assets/images/files.jpg);"></div>
                 <div class="caption">Excepteur sint occaecat cupidatat non proident.</div>
               </div>
               <div class="item__postdate">uploaded at <span class="postdate__time">7:11</span> on <span class="postdate__date">11/06/2017</span></div>
@@ -93,7 +93,7 @@
             <div class="item item--attachment">
               <div class="item__user">Konstantin Kharlov</div>
               <div class="item__inner">
-                <div class="cover" style="background-image:url(../assets/images/roadwork.jpg);"></div>
+                <div class="cover" style="background-image:url(assets/images/roadwork.jpg);"></div>
                 <div class="caption">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
               </div>
               <div class="item__postdate">uploaded at <span class="postdate__time">9:01</span> on <span class="postdate__date">10/06/2017</span></div>
@@ -110,7 +110,7 @@
             <div class="item item--attachment item--self">
               <div class="item__user">Jetro Wils</div>
               <div class="item__inner">
-                <div class="cover" style="background-image:url(../assets/images/files.jpg);"></div>
+                <div class="cover" style="background-image:url(assets/images/files.jpg);"></div>
                 <div class="caption">Excepteur sint occaecat cupidatat non proident.</div>
               </div>
               <div class="item__postdate">uploaded at <span class="postdate__time">7:11</span> on <span class="postdate__date">11/06/2017</span></div>
@@ -118,7 +118,7 @@
             <div class="item item--attachment">
               <div class="item__user">Konstantin Kharlov</div>
               <div class="item__inner">
-                <div class="cover" style="background-image:url(../assets/images/roadwork.jpg);"></div>
+                <div class="cover" style="background-image:url(assets/images/roadwork.jpg);"></div>
                 <div class="caption">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
               </div>
               <div class="item__postdate">uploaded at <span class="postdate__time">9:01</span> on <span class="postdate__date">10/06/2017</span></div>
