added dashed line under center block header

--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -50,6 +50,10 @@
     }
     .panel__center {
       margin-top: 15px;
+
+      header {
+        border-bottom: 1px dashed #ccc;
+      }
     }
 
     .panel__right {
