--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -133,7 +133,7 @@
           text-transform: uppercase;
           color: black;
           border-color: transparent;
-          background: lightgray;
+          background: #D7D7D7;
           padding: 5px 12px;
         }
 
