comment input is sticky

--- a/_includes/blocks/mobile-comments.html
+++ b/_includes/blocks/mobile-comments.html
@@ -1,5 +1,5 @@
 <aside class="document__comments">
-    <div class="add-comment">
+    <div class="add-comment sticky__mobile__comment__header">
       <input class="add-comment__input" placeholder="use @username to notify">
       <div class="add-comment__actions">
         <i class="icon__paper-clip"></i>
