--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -52,6 +52,7 @@
 
       header {
         border-bottom: 1px dashed #ccc;
+        min-height: 60px;
       }
     }
 
@@ -72,6 +73,7 @@
 
         .add-comment {
           border-bottom: 1px dashed #ccc;
+          min-height: 60px;
         }
       }
     }
@@ -180,6 +182,9 @@
   }
 
   .sticky__mobile__app__header {
-    border-bottom: 1px solid black !important;
+    background-color: #F2F2F2;
+    .document__header {
+      border-bottom: 2px solid black !important;
+    }
   }
 }
