fixed panel width for panel-right when it's sticky

--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -62,8 +62,9 @@ $lightgray : #f2f2f2;
 
     .panel__right {
       top: 15px;
-      right: -25%;
+      right: -50%;
       transition: none;
+      width: 50%;
     }
 
   }
