--- a/sass/components/multiSelector.scss
+++ b/sass/components/multiSelector.scss
@@ -169,14 +169,14 @@
     }
 
     &__box {
-      margin: 0 0 15px;
-      box-shadow: 0 0 80px 10px rgba(0,0,0,.7);
+      margin: 0 0 5px;
+      box-shadow: 0 0 200px 60px rgba(0,0,0,0.2);
     }
   }
 
   .itemBox {
     &--children {
-      background-color: #808080;
+      background-color: rgba(0, 0, 0, 0.15);
     }
 
     .itemBoxTable__bodyCellInner--exclude {
