--- a/sass/blocks/appHeader.scss
+++ b/sass/blocks/appHeader.scss
@@ -46,6 +46,15 @@
     padding: 5px;
     min-width: 40px;
     font-size: 24px;
+
+    &.shown {
+      a {
+        position: relative;
+        z-index: 999999999999;
+        color: #285C9E;
+        font-weight: 600;
+      }
+    }
   }
 
   h1 {
