Revert "TEMPORARY FIX - show selected and all blocks as one block"
This reverts commit 32a3e0bc3c6c3af830f1eb1964448a08e37fb3b1.

--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -9,7 +9,7 @@
   </div>
   <!-- /.multiSelector__box -->
 
-  <div class="multiSelector__box multiSelector__box--selection" style="margin-bottom: 0px;">
+  <div class="multiSelector__box multiSelector__box--selection">
     <div class="itemBox">
       <div class="itemBoxTable">
         <div class="itemBoxBody">
@@ -59,7 +59,7 @@
     <div class="itemBox">
       <div class="itemBoxTable">
         <div class="itemBoxBody">
-          <ul class="itemBoxTable__bodyRow multiSelector__box--optionsAll">
+          <ul class="itemBoxTable__bodyRow">
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;">
               <div class="itemBoxTable__bodyCellInner">
                 <i>ऄ </i>
@@ -98,7 +98,7 @@
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle">अ</i>
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
