--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -107,7 +107,7 @@
 
         &--focus {
           background-color: #FFF;
-          box-shadow: 0 0 50px rgba(24, 74, 103, 0.4);
+          box-shadow: 0 0 50px rgba(24,74,103,.4);
           z-index: 9;
         }
 
@@ -245,7 +245,7 @@
 
         &--focus {
           background-color: #FFF;
-          box-shadow: 0 0 50px rgba(24, 74, 103, 0.4);
+          box-shadow: 0 0 50px rgba(24,74,103,.4);
           z-index: 9;
         }
 
@@ -289,7 +289,7 @@
             width: 100%;
             height: 40px;
             background-color: #ffffff;
-            box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.3);
+            box-shadow: inset 0 0 50px rgba(0,0,0,.3);
           }
         }
 
@@ -304,7 +304,7 @@
           color: #000;
 
           .pmx-selector {
-            top: -1px;
+            top: -2px;
           }
         }
       }
@@ -330,7 +330,7 @@
           left: -15%;
           width: 130%;
           height: 130%;
-          box-shadow: inset 0px 5px 22px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: inset 0px 5px 22px 0px rgba(0,0,0,.2);
           pointer-events: none;
         }
       }
