added by default collapsed icon for 1nd level groups

--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -87,7 +87,7 @@
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle">अ</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
