added smartlist example tab

--- a/_includes/blocks/app-nav.html
+++ b/_includes/blocks/app-nav.html
@@ -9,10 +9,9 @@
       <ul>
         <span class="tab__active-link-bar"></span>
         <li><a href="#" class="tab__link active" tabindex="1"><span>Structure</span></a></li>
-        <li><a href="#" class="tab__link" tabindex="2"><span>My smartlists</span></a></li>
-        <li><a href="#" class="tab__link" tabindex="3"><span>Shared by me</span></a></li>
+        <li><a href="#" class="tab__link" tabindex="2"><span>Smartlists</span></a></li>
+        <li><a href="#" class="tab__link" tabindex="3"><span>Recently used</span></a></li>
         <li><a href="#" class="tab__link" tabindex="4"><span>Favorites</span></a></li>
-        <li><a href="#" class="tab__link" tabindex="5"><span>Recently used</span></a></li>
       </ul>
       <div class="tab__more">
         <span class="tab__shadow"></span>
@@ -156,17 +155,13 @@
       </div><!-- /.tabs__panel -->
       <div class="tabs__panel" tabindex="2">
         <!-- tab contents -->
-
+        {% include blocks/app-nav-tab2.html %}
       </div><!-- /.tabs__panel -->
       <div class="tabs__panel" tabindex="3">
         <!-- tab contents -->
 
       </div><!-- /.tabs__panel -->
       <div class="tabs__panel" tabindex="4">
-        <!-- tab contents -->
-
-      </div><!-- /.tabs__panel -->
-      <div class="tabs__panel" tabindex="5">
         <!-- tab contents -->
 
       </div><!-- /.tabs__panel -->
