--- a/sass/components/multiSelector.scss
+++ b/sass/components/multiSelector.scss
@@ -8,13 +8,12 @@
   pointer-events: none;
   z-index: -1;
   transition: all .3s ease-in-out;
-
-  box-shadow: 0 0 200px 60px rgba(0,0,0,.2);
+  font-size: 16px;
 
   &--visible {
-    opacity: 1;
-    pointer-events: auto;
-    z-index: 9999;
+    opacity: 1 !important;
+    pointer-events: auto !important;
+    z-index: 9999 !important;
   }
 
   &--semsearch {
@@ -24,11 +23,113 @@
     width: 50vw;
   }
 
+  &__search {
+    position: relative;
+    height: 40px;
+    background-color: #FFF;
+
+    &Input {
+      width: 100%;
+      height: 100%;
+      padding: 5px 40px 5px 15px;
+      font-size: 16px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+
+      &::-webkit-input-placeholder {
+        font-style: italic;
+        font-weight: 400;
+        color: rgba(0,0,0,.35);
+      }
+
+      &:-webkit-autofill {
+        -webkit-box-shadow: 0 0 0 50px #ffffff inset;
+      }
+    }
+
+    &Icon {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 40px;
+      height: 40px;
+      color: #285C9E;
+      text-decoration: none;
+      font-size: 20px;
+      padding: 5px;
+
+      &::before {
+        content: "\e036";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+
+    &Selected {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: calc(100% - 40px);
+      padding: 6px 0 6px 15px;
+      white-space: nowrap;
+      overflow: hidden;
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 30px;
+        height: 100%;
+        background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 90%,rgba(255,255,255,1) 100%);
+        pointer-events: none;
+        z-index: 99;
+      }
+
+      .pmx-selector {
+        margin-right: 5px;
+      }
+    }
+  }
+
   &__box {
     margin: 0 0 15px;
+    box-shadow: 0 0 200px 60px rgba(0,0,0,0.2);
+  }
 
-    &:last-child {
-      margin: 0;
+  .itemBox {
+    &--children {
+      .itemBox--children {
+        background-color: rgba(0,0,0,0);
+      }
+    }
+
+    .itemBoxTable__bodyCellInner--exclude {
+      .outer {
+        text-decoration: line-through;
+        color: red;
+        .inner {
+          color: black;
+        }
+      }
+    }
+  }
+
+  .pmx-selector__value {
+    &:hover, &--selected {
+      &.pmx-selector__value--include {
+        .pmx-selector__label {
+          color: #C79D54 !important;
+        }
+      }
+      &.pmx-selector__value--exclude {
+        .pmx-selector__label {
+          color: red !important;
+        }
+      }
     }
   }
 }
@@ -76,131 +177,4 @@
   100% {
     opacity: 1;
   }
-}
-
-#multiSelector-2 {
-  font-size: 20px;
-
-  &.multiSelector--visible {
-    pointer-events: auto;
-    z-index: 99999999;
-    opacity: 1 !important;
-  }
-
-  .multiSelector {
-    &__search {
-
-        position: relative;
-        height: 40px;
-        background-color: #FFF;
-
-        &Input {
-          width: 100%;
-          height: 100%;
-          padding: 5px 40px 5px 15px;
-          font-size: 16px;
-
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-
-          &::-webkit-input-placeholder {
-            font-style: italic;
-            font-weight: 400;
-            color: rgba(0,0,0,.35);
-          }
-
-          &:-webkit-autofill {
-            -webkit-box-shadow: 0 0 0 50px #ffffff inset;
-          }
-        }
-
-        &Icon {
-          position: absolute;
-          top: 0;
-          right: 0;
-          width: 40px;
-          height: 40px;
-          color: #285C9E;
-          text-decoration: none;
-          font-size: 20px;
-          padding: 5px;
-
-          &::before {
-            content: "\e036";
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-          }
-        }
-
-        &Selected {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: calc(100% - 40px);
-          padding: 6px 0 6px 15px;
-          white-space: nowrap;
-          overflow: hidden;
-
-          &::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            right: 0;
-            width: 30px;
-            height: 100%;
-            background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 90%,rgba(255,255,255,1) 100%);
-            pointer-events: none;
-            z-index: 99;
-          }
-
-          .pmx-selector {
-            margin-right: 5px;
-          }
-        }
-    }
-
-    &__box {
-      margin: 0;
-      box-shadow: 0 0 200px 60px rgba(0,0,0,0.2);
-    }
-  }
-
-  .itemBox {
-    &--children {
-      background-color: rgba(0,0,0,0.3);
-
-      .itemBox--children {
-        background-color: rgba(0,0,0,0);
-      }
-    }
-
-    .itemBoxTable__bodyCellInner--exclude {
-      .outer {
-        text-decoration: line-through;
-        color: red;
-        .inner {
-          color: black;
-        }
-      }
-    }
-  }
-
-  .pmx-selector__value {
-    &:hover, &--selected {
-      &.pmx-selector__value--include {
-        .pmx-selector__label {
-          color: #C79D54 !important;
-        }
-      }
-      &.pmx-selector__value--exclude {
-        .pmx-selector__label {
-          color: red !important;
-        }
-      }
-    }
-  }
-
 }
